[gd_scene load_steps=30 format=3 uid="uid://ddttwvkwuyjkp"]

[ext_resource type="Script" path="res://scripts/graph_scene_.gd" id="1_s8akx"]
[ext_resource type="Texture2D" uid="uid://38b7uiombv1i" path="res://assets/panel_ground.png" id="2_ea86d"]
[ext_resource type="Texture2D" uid="uid://dbqlo4xfgpsti" path="res://assets/background.png" id="3_ljdnw"]
[ext_resource type="FontFile" uid="uid://cuedit6mofbc7" path="res://fonts/Oswald-Regular.ttf" id="4_bcaus"]
[ext_resource type="Texture2D" uid="uid://c6x7foqce4p3p" path="res://assets/refresh 2.png" id="5_1ximb"]
[ext_resource type="PackedScene" uid="uid://btlywuhhfxhue" path="res://scenes/info.tscn" id="6_a5m2g"]
[ext_resource type="AudioStream" uid="uid://je56yuspmr2j" path="res://sounds/click.mp3" id="7_dpabh"]
[ext_resource type="Texture2D" uid="uid://bayxcpanh6igg" path="res://assets/speedometer 2.png" id="8_x2eme"]
[ext_resource type="Texture2D" uid="uid://cajuk5gipq1td" path="res://assets/Animation window (1).png" id="9_y0njs"]
[ext_resource type="Texture2D" uid="uid://dvv3u7aygsb14" path="res://assets/x0.25.png" id="10_hmow3"]
[ext_resource type="Texture2D" uid="uid://banjqlgmyrvb" path="res://assets/x0.25 (1).png" id="11_44pr7"]
[ext_resource type="Texture2D" uid="uid://bdvbvr143cer3" path="res://assets/x1.0.png" id="12_e2k7e"]
[ext_resource type="Texture2D" uid="uid://ce1wiqav6w6m" path="res://assets/x1.0 (1).png" id="13_hoecy"]
[ext_resource type="Texture2D" uid="uid://fjhoj2p2u44o" path="res://assets/x1.5.png" id="14_h734s"]
[ext_resource type="Texture2D" uid="uid://raegxwdcg7ah" path="res://assets/x1.5 (1).png" id="15_gjvhu"]
[ext_resource type="Texture2D" uid="uid://nblvqfbidyy" path="res://assets/x2.0.png" id="16_lj0ks"]
[ext_resource type="Texture2D" uid="uid://b7uwl6bo7f2eq" path="res://assets/x2.0 (1).png" id="17_1pf58"]
[ext_resource type="Texture2D" uid="uid://bjlc36uw0fef" path="res://assets/algorithm (3) 2.png" id="18_m1oil"]
[ext_resource type="Texture2D" uid="uid://btu75lmaju2sm" path="res://assets/menuBG.png" id="19_pcl7v"]
[ext_resource type="Texture2D" uid="uid://oafthldre56y" path="res://assets/hover.png" id="20_8e7tm"]
[ext_resource type="Texture2D" uid="uid://q26jegyc6h55" path="res://assets/nodeWindow.png" id="21_fvlfy"]
[ext_resource type="Texture2D" uid="uid://dm51652xq2n7m" path="res://assets/close button.png" id="22_q7rre"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dn7nt"]
content_margin_left = 8.0
texture = ExtResource("2_ea86d")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ug85d"]
texture = ExtResource("3_ljdnw")
region_rect = Rect2(3, 0.588997, 1383, 668)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwil5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fadsu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acwp5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2t0k"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8er0"]
bg_color = Color(0.933333, 0.890196, 0.964706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GraphScene_" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -405.0
offset_bottom = -396.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8akx")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 407.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dn7nt")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -16

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_ug85d")

[node name="CenterContainer" type="MarginContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 110
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
theme_override_constants/margin_bottom = 24

[node name="Label" type="Label" parent="Background/MarginContainer/Rows/GameInfo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.619608, 0.47451, 0.92549, 1)
theme_override_fonts/font = ExtResource("4_bcaus")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 222.0
offset_top = 37.0
offset_right = 298.0
offset_bottom = 113.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_kwil5")
theme_override_styles/hover = SubResource("StyleBoxFlat_fadsu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_acwp5")
theme_override_styles/focus = SubResource("StyleBoxFlat_p2t0k")
icon = ExtResource("5_1ximb")
flat = true
alignment = 2

[node name="info" parent="." instance=ExtResource("6_a5m2g")]
position = Vector2(1042, 46)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dpabh")

[node name="speed" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 132.0
offset_top = 38.0
offset_right = 205.0
offset_bottom = 111.0
grow_horizontal = 0
icon = ExtResource("8_x2eme")
flat = true

[node name="SpeedMenu" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 129.0
offset_right = 330.0
offset_bottom = 326.0
grow_horizontal = 0
texture = ExtResource("9_y0njs")
expand_mode = 1

[node name="x25" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 22.0
offset_top = 82.0
offset_right = 81.0
offset_bottom = 127.0
texture_normal = ExtResource("10_hmow3")
texture_hover = ExtResource("11_44pr7")
stretch_mode = 0

[node name="x1" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 99.0
offset_top = 81.0
offset_right = 158.0
offset_bottom = 126.0
texture_normal = ExtResource("12_e2k7e")
texture_hover = ExtResource("13_hoecy")
stretch_mode = 0

[node name="x1_5" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 173.0
offset_top = 80.0
offset_right = 232.0
offset_bottom = 125.0
texture_normal = ExtResource("14_h734s")
texture_hover = ExtResource("15_gjvhu")
stretch_mode = 0

[node name="x2" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 251.0
offset_top = 79.0
offset_right = 310.0
offset_bottom = 124.0
texture_normal = ExtResource("16_lj0ks")
texture_hover = ExtResource("17_1pf58")
stretch_mode = 0

[node name="AlgoIcon" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 41.0
offset_right = 132.0
offset_bottom = 117.0
icon = ExtResource("18_m1oil")
flat = true

[node name="MenuOptions" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 128.0
offset_right = 339.0
offset_bottom = 456.0
texture = ExtResource("19_pcl7v")

[node name="SelectionSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 102.0
offset_top = 13.0
offset_right = 225.0
offset_bottom = 53.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("20_8e7tm")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/SelectionSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "DFS"

[node name="QuickSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 102.0
offset_top = 59.0
offset_right = 225.0
offset_bottom = 99.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("20_8e7tm")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/QuickSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "BFS"

[node name="NodeValueWindow" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 811.0
offset_top = 223.0
offset_right = 1131.0
offset_bottom = 384.0
texture = ExtResource("21_fvlfy")

[node name="LineEdit" type="LineEdit" parent="NodeValueWindow"]
layout_mode = 0
offset_left = 35.0
offset_top = 57.0
offset_right = 249.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b8er0")
caret_blink = true

[node name="Button" type="Button" parent="NodeValueWindow"]
layout_mode = 0
offset_left = 251.0
offset_top = 5.0
offset_right = 276.0
offset_bottom = 30.0
icon = ExtResource("22_q7rre")
flat = true

[connection signal="pressed" from="speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="AlgoIcon" to="." method="_on_algo_icon_pressed"]
[connection signal="text_submitted" from="NodeValueWindow/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="NodeValueWindow/Button" to="." method="_on_button_pressed"]
